# mail-assistant

./: .gitignore  README.md  auth_gmail.py  classify_with_codex.py  fetch_email_bodies.py  fetch_emails.py  main.py  notify_slack.py  pyproject.toml  run_mail_pipeline.py  show_state.py  slack_service.py  state_store.py
.codex/: config.toml
.github/workflows/: ci.yml
mail_assistant/: __init__.py  __main__.py  classification.py  json_io.py  model_base.py  models.py  notifications.py  settings.py  state.py
mail_assistant/application/: __init__.py  classification.py  fetch.py  notifications.py  pipeline.py  ports.py
mail_assistant/cli/: __init__.py  auth_gmail.py  classify.py  fetch_email_bodies.py  fetch_emails.py  main.py  notify_slack.py  pipeline.py  show_state.py
mail_assistant/clients/: __init__.py  codex.py  slack.py
mail_assistant/domain/: __init__.py  models.py
mail_assistant/gmail/: __init__.py  auth.py  client.py  mime.py
mail_assistant/infrastructure/: __init__.py  codex.py  gmail.py  json_files.py  slack.py  sqlite.py
prompts/: classify_emails.md
providers/: codex_runner.py
schemas/: email_classification.schema.json
scripts/: run_mail_pipeline.sh
tests/: test_classification.py  test_json_io.py  test_notifications.py  test_settings.py  test_state.py
tests/gmail/: test_mime.py
