[project]
name = "mail-assistant"
version = "0.1.0"
description = "Gmailの未読メールを分類してSlackへ通知するローカルアシスタント"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2,<3",
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.scripts]
mail-assistant = "mail_assistant.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11.13",
    "ty>=0.0.1a6",
]

[build-system]
requires = ["uv-build>=0.10.2,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
minversion = "8.3"
addopts = ["-q", "-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "RET", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["mail_assistant"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["mail_assistant", "tests"]

[tool.ty.rules]
possibly-unresolved-reference = "error"
